SONARIAC-627 PolicyReferenceCollector should not try to create invalid secondary locations (#710)
GitOrigin-RevId: c7ca92f8a3adc83399eceb71ceb7a22d358afa5d